--- a/style.css
+++ b/style.css
@@ -46,3 +46,36 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+.left {
+	width: 35%;
+	min-height: 100vh;
+	background: url(assets/halie-west-25xggax4bSA-unsplash.jpg);
+	background-size: 100% 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+
+@font-face {
+	font-family: norse-bold;
+	src: url(assets/Norse-Bold.otf);
+}
+
+.logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo > img {
+	width: 20%;
+	flex-shrink: 0;
+}
+
+.logo > h1 {
+	font-family: norse-bold;
+	color: whitesmoke;
+	font-size: 6rem;
+}
