--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Roboto&display=swap');
+
+
 body {
     min-height: 100vh;
     display: flex;
+    font-family: 'Roboto', sans-serif;
 }
 
 .logo {
@@ -13,10 +17,12 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    flex-grow: 1;
 }
 
 .content {
     width: 65vw;
+    min-height: 100vh;
 }
 
 .logo > div:first-child {
@@ -26,7 +32,7 @@ body {
     padding: 0.5rem 0;
     background-color: rgba(0, 0, 0, 0.5);
     position: relative;
-    top: 125px;
+    top: 120px;
 }
 
 .logo > div:first-child > img {
@@ -44,79 +50,89 @@ body {
     font-size: 6vw;
 }
 
-.logo > div:last-child, a {
+.credits, #credits {
     color: whitesmoke;
     padding: 0.5rem 0;
     font-size: 0.675rem;
 }
 
-.content > div:nth-child(2) {
-    min-height: 12.5rem;
+.input-section {
+    min-height: calc(100% - 28rem);
     background-color: #FFFFFF;
-}
-
-form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
-label {
-    color: gray;
-    font-size: 0.65rem;
+.input-section > h1 {
+    color: #36454F;
     font-weight: bold;
-}
-
-.input {
-    display: flex;
-    flex-direction: column;
-}
-
-.content > div:nth-child(2) > form > div {
-    display: flex;
+    font-size: 1.2rem;
+    padding: 0.5rem 0 0.8rem 3rem;
 }
 
 .content > div:nth-child(odd){
-    /* border: 1px solid black; */
+    border: 1px solid black;
     min-height: 14rem;
     background-color: #F9FAFB;
 }
-<<<<<<< HEAD
-=======
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+label {
+    font-size: 0.6rem;
+    letter-spacing: 0.05rem;
+    color: #5A5A5A;
 }
 
-
-.left {
-	width: 35%;
-	min-height: 100vh;
-	background: url(assets/halie-west-25xggax4bSA-unsplash.jpg);
-	background-size: 100% 100%;
-	display: flex;
-	flex-direction: column;
+input {
+    box-sizing: border-box;
 }
 
-
-@font-face {
-	font-family: norse-bold;
-	src: url(assets/Norse-Bold.otf);
+form > div {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.logo {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.input {
+    padding: 0 3rem 1rem 3rem;
+    display: flex;
+    flex-direction: column;
 }
 
-.logo > img {
-	width: 20%;
-	flex-shrink: 0;
+.content > div:first-child div {
+    /* border: 1px solid black; */
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #36454F;
+    margin: 5.5rem 0 0 3rem;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-.logo > h1 {
-	font-family: norse-bold;
-	color: whitesmoke;
-	font-size: 6rem;
+em {
+    font-style: italic;
+    padding-right: 0.1rem;
 }
->>>>>>> a7a0a6204c492559a47916d28892df81b3c1132b
+
+.button-section {
+    /* border: 1px solid black; */
+    margin: 1.9rem 0 0 3rem;
+    font-size: 1rem;
+}
+
+.button-section > button {
+    border: none;
+    border-radius: 4px;
+    background-color: #596D48;
+    font-size: 0.75rem;
+    font-weight: bold;
+    color: white;
+    padding: 0.75em 1.85rem;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.button-section > h3, a {
+    margin-top: 1.5rem;
+    font-size: 0.9rem;
+}
